  * Removed circular references in parsed documentation objects.
  * Improved inheritance handling, now properties and events can be inherited same as methods.
  * Improved handling of cross-file relationships, now having two related objects in separate files is not a problem.
  * Improved ability to recognize membership of previously defined objects.
  * Added ability to redefine parsing behavior with plugins.
  * @methodOf is a synonym for @function and @memberOf.
  * Added @default to document default values of members that are objects.
  * Added ability to parse and refer to inner functions.
  * Fixed bug that appeared when calling a method to set properties of the instance referred to by "this".
  * Added ability to automatically create links to other symbols.
  * New "jsdoc" template now produces fully W3C valid XHTML.
  * Inline parameter type hint comments are now documented.
  * Fixed error: Locally scoped variables (declared with var) no longer appear as global.
  * It is now possible to run JsDoc Toolkit from any directory.
  * Added support for inline {@link ...} tags.
  * Added support for the -H command-line option to allow for custom content handlers.
  * Tag names @inherits and @scope changed to @borrows and @lends.
  ? Combining @constructor in a doclet with @lends now supported.
  * Multiple @lend tags now supported.
  * Added support for the @constructs tag, used inside a @lends block.
  * Added support for the @constant tag.
  * Fixed bug that prevented the use of [] as a default value.
  * Added support for the @field tag.
  * Added support for the @public tag (applied to inner functions).
  * @namespace tag can now be applied to functions, not just object literals.
  * Added support for the -s command line option to suppress source code output.
  * Added new unit test framework.
  * Underscored symbols are now treated as if they have a @private tag by default.
  * Improved support for anonymous constructors.